--- a/scss/navbar.scss
+++ b/scss/navbar.scss
@@ -1,6 +1,6 @@
 .navbar {
   width: 100%;
-  position: sticky;
+  position: fixed;
   top: 0;
   z-index: 99;
   flex-direction: row;
